fix input paragrapth too long

--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,8 @@ body {
 
 .total-list {
   overflow-y: auto;
-  min-height: 600px;
-  max-height: 600px;
+  min-height: 300px;
+  max-height: 300px;
   padding: 0 8px;
 }
 
@@ -66,6 +66,7 @@ body {
   padding: 4px;
   border-radius: 8px;
   border: 4px solid #316ee7;
+  text-align: left;
 }
 
 .form form input[type="text"] {
@@ -77,6 +78,7 @@ body {
   border-radius: 8px;
   padding: 16px 12px;
   font-size: 20px;
+  max-width: 425px;
 }
 
 .form button {
